--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-<h1> Hello </h1>
+<header>This is a test</header>
+<h1> Hello world </h1>
 
 <h2>Hello</h2>
+<p>
+Text, text, text
+</p>
 
-<footer>All rights reserved</foter>
+<footer>All <b>rights reserved</b></foter>
 
 
